# embed-resource

./: .gitignore  CMakeLists.txt  README.md  Resource.h  embedresource.cpp
